comparison success
working with java